# musiclm

./: .gitignore  README.md  pyproject.toml
notebooks/: analyze.ipynb  finetune.ipynb  parser.ipynb  preprocessing.ipynb
src/: main.py
