[project]
name = "musiclm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "music21>=9.5.0",
    "setuptools>=78.1.0",
    "torch>=2.6.0",
    "unsloth>=2025.3.19",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
]
